FIx headerbar color not showing

--- a/data/Application.css
+++ b/data/Application.css
@@ -1,4 +1,8 @@
 @define-color colorPrimary #855e42;
+
+.titlebar {
+    background-color: @colorPrimary;
+}
 .keyboard-button {
     border-radius: 50%;
     border: 2px solid alpha(#fff, 0.6);
@@ -11,7 +15,7 @@
     box-shadow: 0 2px 4px alpha(#000, 1.0),
 		        inset 0 4px 8px alpha(#000, 0.7),
                 inset 0 -4px 6px alpha(#fff, 0.1);
-	 
+
 }
 
 .keyboard-button-active {
@@ -67,8 +71,8 @@
     background-size: 240px 240px;
     border: 1px solid alpha(#000, 0.5);
     border-radius: 2px;
-    box-shadow: inset 0 6px 6px -4px #000, 
-                inset 0 -6px 6px -4px #000, 
+    box-shadow: inset 0 6px 6px -4px #000,
+                inset 0 -6px 6px -4px #000,
                 inset 0 -1px 0 alpha(#fff, 0.1);
 }
 
@@ -125,7 +129,7 @@
     box-shadow: inset 0 0 0 4px #fbf7e7,
             inset 0 0 0 2px #b7af99,
             0 0px 0px 1px alpha(#000, 0.5)
-    
+
 }
 
 .plug-socket-button {
